name:               my-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , process >= 1.6.1
                  , hakyll == 4.12.*
                  , hakyll-sass == 0.2.3
  ghc-options:      -threaded
  default-language: Haskell2010
